--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require formtastic-bootstrap
+ * require my_formtastic_changes
  *= require_self
  */
+@import "bootstrap";
