--- a/app/views/rownowazniki/index.html.haml
+++ b/app/views/rownowazniki/index.html.haml
@@ -1,13 +1,18 @@
 %p#notice= notice
-%h1 Rownowazniki
-%table
+
+%h1
+  .float-right
+    = link_to 'nowy', new_rownowaznik_path, class: [:btn, "btn-outline-primary"], role: :button
+  Równoważniki
+
+%table.table.table-bordered.table-striped.table-hover.table-searchable
   %thead
     %tr
       %th Gatunek
-      %th Nazwautrzymania
-      %th Sezon
-      %th Wartosc
-      %th{:colspan => "3"}
+      %th System utrzymania
+      %th Pora roku
+      %th Wartość
+      %th{:colspan => "2"}
   %tbody
     - @rownowazniki.each do |rownowaznik|
       %tr
@@ -15,8 +20,5 @@
         %td= rownowaznik.nazwautrzymania.name
         %td= rownowaznik.sezon.name
         %td= rownowaznik.wartosc
-        %td= link_to 'Show', rownowaznik
-        %td= link_to 'Edit', edit_rownowaznik_path(rownowaznik)
-        %td= link_to 'Destroy', rownowaznik, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Rownowaznik', new_rownowaznik_path
+        %td= link_to 'edytuj', edit_rownowaznik_path(rownowaznik), class: [:btn, "btn-outline-primary", "btn-sm"], role: :button
+        %td= link_to 'usuń', rownowaznik, method: :delete, data: { confirm: 'Na pewno?' }, class: [:btn, "btn-outline-danger", "btn-sm"], role: :button
