--- a/app/views/rownowazniki/new.html.haml
+++ b/app/views/rownowazniki/new.html.haml
@@ -1,3 +1,4 @@
-%h1 New Rownowaznik
-= render 'form', rownowaznik: @rownowaznik
-= link_to 'Back', rownowazniki_path
+.container
+  %h1 New Rownowaznik
+  = render 'form', rownowaznik: @rownowaznik
+  = link_to 'Back', rownowazniki_path
