--- a/app/views/rownowazniki/edit.html.haml
+++ b/app/views/rownowazniki/edit.html.haml
@@ -1,5 +1,6 @@
-%h1 Editing Rownowaznik
-= render 'form', rownowaznik: @rownowaznik
-= link_to 'Show', @rownowaznik
-|
-= link_to 'Back', rownowazniki_path
+.container
+  %h1 Editing Rownowaznik
+  = render 'form', rownowaznik: @rownowaznik
+  = link_to 'Show', @rownowaznik
+  |
+  = link_to 'Back', rownowazniki_path
