--- a/app/views/pomoc/instrukcja.html.haml
+++ b/app/views/pomoc/instrukcja.html.haml
@@ -1,4 +1,4 @@
-.container
+#instrukcja.container
   .row
     .col-sm-12.text-center
       %h1
@@ -181,7 +181,6 @@
 tocbot.init({
 tocSelector: '.js-toc',
 contentSelector: '.js-toc-content',
-headingSelector: 'h1, h2, h3, h4',
-positionFixedClass: 'is-position-fixed',
+headingSelector: 'h1, h2, h3',
 });
 </script>
